# par2-discovery-engine

./: .env.example  .gitattributes  .gitignore  CITATION.cff  CLA.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  FUTURE_WORK.md  INSTALL.md  LICENSE  NOTICE  README.md  SECURITY.md  ZENODO_UPLOAD.md  docker-compose.yml  github-push-shallow.ts  package-lock.json  package.json  replit.md  vite-plugin-meta-images.ts  zenodo.json
analyses/: GSE157357_gearbox_validation_report.md  GSE245295_Aging_Pancreas_PAR2_Report.md  GSE262627_PDA_Organoid_PAR2_Report.md  Multi_Tissue_Aging_Validation_Report.md
client/: index.html
docs/: BLIND_SPOT_VALIDATION_REPORT.md  BOMAN_BRIDGE_ANALYSIS.md  CERTIFICATION_DIAGNOSTIC.md  COMPARTMENT_AR2_RESULTS.md  COMPLETE_ANALYSIS_REPORT.md  COMPREHENSIVE_DATASET_SUMMARY.md  CPD_PROXY_DEFINITIONS.md  DATASET_MANIFEST.md  DECISIVE_VALIDATION_TESTS.md  FIBONACCI_REPLY_REVISIONS.md  USER_MANUAL.md
manuscripts/: Appendix_Dataset_Admissibility.md  DATASET_ADMISSIBILITY_APPENDIX.md  EXPLOSIVE_DYNAMICS_METHODOLOGY_REPORT.md  Falsifier_Results_Report.md  Fibonacci_Reply_Revised.md  GSE56445_perturbation_validation.json  MASTER_VALIDATION_RESULTS.md  PAR2_COMPREHENSIVE_FINDINGS.json  PAR2_Complete_Manuscript.tex  PAR2_DISCOVERY_ENGINE_COMPREHENSIVE_SUMMARY.md  PAR2_Essential_Results.json  PAR2_User_Guide.html  PREREGISTERED_VALIDATION_PLAN.md  Paper1_Method_Atlas.tex  Paper2_Cancer_Biology.tex  README.md  README_SUBMISSION.md  REVIEWER_SAFE_SUMMARY.md  Reply_to_Boman_FQ_2025.tex  SUBMISSION_CHECKLIST.md  baboon_replication.json  baboon_standalone_analysis.json  boman_ar2_bridge_analysis.json  cgm_fibonacci_analysis.json  comprehensive_stress_test.json  comprehensive_validation.json  confound_checks.json  cover_letter_paper1.tex  (+41 more)
par2-python-package/: LICENSE  README.md  pyproject.toml
par2-python-package/conda-recipe/: meta.yaml
par2-python-package/data/: example_circadian.csv  generate_example.py
par2-python-package/examples/: quickstart.py
par2-python-package/examples/vignettes/: 01_circadian_mouse_liver.py  02_proteomics.py  03_cgm_glucose.py  04_plant_arabidopsis.py  05_yeast_metabolic_cycle.py  06_cancer_organoids.py
par2-python-package/par2/: __init__.py  cli.py  core.py  hierarchy.py  io.py  metrics.py
par2-python-package/tests/: test_core.py
(+518 files in other folders)
