[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "par2-circadian"
version = "1.0.0"
description = "AR(2) eigenvalue analysis for gene expression time series"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Michael Whiteside", email = "mickwh@msn.com"}
]
keywords = ["circadian", "gene-expression", "autoregressive", "eigenvalue", "time-series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
]

[project.optional-dependencies]
full = ["scipy>=1.7", "matplotlib>=3.4"]

[project.scripts]
par2 = "par2.cli:main"

[project.urls]
Homepage = "https://par2-discovery-engine.replit.app"
Repository = "https://github.com/mickwh2764/par2-discovery-engine"
