[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "par2-circadian"
version = "1.1.0"
description = "AR(2) eigenvalue analysis for gene expression time series"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Michael Whiteside", email = "mickwh@msn.com"}
]
keywords = ["circadian", "gene-expression", "autoregressive", "eigenvalue", "time-series", "chronobiology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
]

[project.optional-dependencies]
full = ["scipy>=1.7", "matplotlib>=3.4"]

[project.scripts]
par2 = "par2.cli:main"

[project.urls]
Homepage = "https://par2discovery.com"
Repository = "https://github.com/mickwh2764/par2-discovery-engine"
Documentation = "https://github.com/mickwh2764/par2-discovery-engine/tree/main/par2-python-package"

[tool.setuptools.packages.find]
include = ["par2*"]
